crates/plotnik-tests/tests/04-emit/types/captures/invalid_raw_capture_stops_capture_type.txt
Q = (program
  (expression_statement
    (identifier) @value
  ) @value :: bool
)
------------------ DIAGNOSTICS -------------------
error: capture `@value` already defined in this scope
 --> query.ptk:4:5
  |
4 |   ) @value :: bool
  |     ^^^^^^
  |
help: rename one capture, or use an enum if they are mutually exclusive branches
